[package]
name = "MCBackup"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
inquire = "0.9.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
time = {version = "0.3.45", features = ["formatting", "parsing", "macros", "local-offset"]}
